# soa

./: CMakeLists.txt  README.md  SOAAccessor.cpp  field_arrays.h  field_descriptor.h  packed_field_arrays.h  soatest.cpp  soatl_constants.h  variadic_template_utils.h  vecreport.cmake
include/soatl/: compute.h  constants.h  copy.h  field_arrays.h  field_descriptor.h  field_pointers.h  memory.h  packed_field_arrays.h  simd.h  static_packed_field_arrays.h  variadic_template_utils.h
tests/: benchmark.cpp  computetest.cpp  data_fields_db.h  declare_fields.h  serializetest.cpp  soatest.cpp
